force-app/main/default/objects/Opportunity/fields/I_RS_Age_in_Months__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Age_in_Months__c</fullName>
    <formula>IF (  OR( ISPICKVAL( StageName , &apos;Closed Won&apos;) , ISPICKVAL( StageName , &apos;Closed Lost&apos;) ),

IF( 
(CloseDate -  DATEVALUE(CreatedDate) ) / 365 * 12 &lt; 1, 1, (CloseDate - DATEVALUE(CreatedDate)) / 365 * 12
),

IF( 
(Today() -  DATEVALUE(CreatedDate)) / 365 * 12 &lt; 1, 1, (Today() - DATEVALUE(CreatedDate)) / 365 * 12
)

)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Age in Months</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>