force-app/main/default/objects/Opportunity/fields/I_RS_Opportunity_Sub_Type__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Opportunity_Sub_Type__c</fullName>
    <label>Project Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>I_RS_Type_of_Opportunity__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Opportunity_Sub_Type</valueSetName>
    </valueSet>
</CustomField>