force-app/main/default/objects/Opportunity/fields/I_RS_Research_Portfolio_Contact__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Research_Portfolio_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Research Portfolio Contact</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>