force-app/main/default/objects/Opportunity/fields/L_PR_Closed_Reason__c.field-meta.xml
<CustomField>
    <fullName>L_PR_Closed_Reason__c</fullName>
    <description>Reason for closed lost opportunity</description>
    <label>Closed Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>