force-app/main/default/objects/Opportunity/fields/L_PR_Discipline__c.field-meta.xml
<CustomField>
    <fullName>L_PR_Discipline__c</fullName>
    <description>This field refers to discipline aligned with this opportunity</description>
    <label>Discipline</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>L_PR_Discipline</valueSetName>
    </valueSet>
</CustomField>