force-app/main/default/objects/Opportunity/fields/L_PR_Idea__c.field-meta.xml
<CustomField>
    <fullName>L_PR_Idea__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Reference to the related Lead</description>
    <label>Lead Title</label>
    <referenceTo>L_PR_Idea__c</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>