force-app/main/default/objects/Opportunity/fields/L_PR_La_Trobe_Org_Unit__c.field-meta.xml
<CustomField>
    <fullName>L_PR_La_Trobe_Org_Unit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>La Trobe Organisation Unit</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>I_RS_La_Trobe_Organisation_Unit</value>
        </filterItems>
        <filterItems>
            <field>Account.I_RS_Status__c</field>
            <operation>notEqual</operation>
            <value>Closed</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>