force-app/main/default/objects/Opportunity/fields/L_PR_Level__c.field-meta.xml
<CustomField>
    <fullName>L_PR_Level__c</fullName>
    <description>This fields define the level of opportunity</description>
    <label>Opportunity Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Strategic</fullName>
            </value>
            <value>
                <fullName>Significant</fullName>
            </value>
            <value>
                <fullName>Operational</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>