force-app/main/default/objects/Opportunity/fields/L_PR_Location__c.field-meta.xml
<CustomField>
    <fullName>L_PR_Location__c</fullName>
    <description>Identies the location associated with opportunity</description>
    <label>Location</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Domestic</fullName>
            </value>
            <value>
                <fullName>International</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>