force-app/main/default/objects/Opportunity/fields/L_PR_Location_Country__c.field-meta.xml
<CustomField>
    <fullName>L_PR_Location_Country__c</fullName>
    <description>Identifies the country associated with location</description>
    <label>Location Country</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>L_PR_Location__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>I_RM_Country</valueSetName>
    </valueSet>
</CustomField>