force-app/main/default/objects/Opportunity/fields/L_PR_Opportunity_Close_Date__c.field-meta.xml
<CustomField>
    <fullName>L_PR_Opportunity_Close_Date__c</fullName>
    <label>Opportunity Close Date</label>
    <type>Date</type>
</CustomField>