force-app/main/default/objects/Opportunity/fields/L_PR_Opportunity_Source__c.field-meta.xml
<CustomField>
    <fullName>L_PR_Opportunity_Source__c</fullName>
    <label>Opportunity Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>L_PR_Source</valueSetName>
    </valueSet>
</CustomField>