force-app/main/default/objects/Opportunity/fields/L_PR_Responsible_Business_Unit__c.field-meta.xml
<CustomField>
    <fullName>L_PR_Responsible_Business_Unit__c</fullName>
    <description>Business unit responsible for this opportunity.</description>
    <inlineHelpText>Business unit responsible for this opportunity.</inlineHelpText>
    <label>Responsible Business Unit</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Educational Partnerships</fullName>
            </value>
            <value>
                <fullName>Industry Engagement</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>