force-app/main/default/objects/Opportunity/fields/L_PR_StartDate__c.field-meta.xml
<CustomField>
    <fullName>L_PR_StartDate__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <description>Start date of opportunity</description>
    <label>Opportunity Start date</label>
    <type>Date</type>
</CustomField>