force-app/main/default/objects/Opportunity/fields/L_PR_Sub_Type__c.field-meta.xml
<CustomField>
    <fullName>L_PR_Sub_Type__c</fullName>
    <description>Provides a way of  further classifying/categorising this opportunity</description>
    <label>Opportunity Sub Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>L_PR_Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>L_PR_Sub_Type</valueSetName>
    </valueSet>
</CustomField>