force-app/main/default/objects/Opportunity/fields/L_PR_Type__c.field-meta.xml
<CustomField>
    <fullName>L_PR_Type__c</fullName>
    <label>Opportunity Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>L_PR_Type</valueSetName>
    </valueSet>
</CustomField>