force-app/main/default/objects/Opportunity/recordTypes/PRM_Opportunity.recordType-meta.xml
<RecordType>
    <fullName>PRM_Opportunity</fullName>
    <active>true</active>
    <businessProcess>PRM Opportunity Process</businessProcess>
    <label>PRM Opportunity</label>
</RecordType>