force-app/main/default/objects/Opportunity/validationRules/Active_Parent_Opportunity_on_creation.validationRule-meta.xml
<ValidationRule>
    <fullName>Active_Parent_Opportunity_on_creation</fullName>
    <active>true</active>
    <errorConditionFormula>ISNEW() &amp;&amp;   (ISPICKVAL(L_PR_Parent_Opportunity__r.StageName , &apos;Closed Won&apos;) || ISPICKVAL(L_PR_Parent_Opportunity__r.StageName , &apos;Closed Lost&apos;))</errorConditionFormula>
    <errorDisplayField>L_PR_Parent_Opportunity__c</errorDisplayField>
    <errorMessage>Cannot link to a Parent Opportunity with status Closed.</errorMessage>
</ValidationRule>