force-app/main/default/objects/Opportunity/validationRules/Cannot_edit_Closed_Opportunity.validationRule-meta.xml
<ValidationRule>
    <fullName>Cannot_edit_Closed_Opportunity</fullName>
    <active>true</active>
    <errorConditionFormula>OR(
(
(ISPICKVAL(PRIORVALUE(StageName),&apos;Closed Won&apos;) || ISPICKVAL(PRIORVALUE( StageName ),&apos;Closed Lost&apos;))
&amp;&amp; ISCHANGED(StageName)),
(
(ISPICKVAL(StageName ,&apos;Closed Won&apos;)|| ISPICKVAL(StageName ,&apos;Closed Lost&apos;)) &amp;&amp; NOT(ISCHANGED(StageName)))
)
&amp;&amp; NOT(ISNEW() ) &amp;&amp; RecordType.Name = &apos;PRM Opportunity&apos;</errorConditionFormula>
    <errorMessage>Closed Opportunity cannot be edited.</errorMessage>
</ValidationRule>