force-app/main/default/objects/Opportunity/validationRules/Cant_fill_ClosedReason_ifnot_Closed_Lost.validationRule-meta.xml
<ValidationRule>
    <fullName>Cant_fill_ClosedReason_ifnot_Closed_Lost</fullName>
    <active>true</active>
    <errorConditionFormula>NOT( ISBLANK( L_PR_Closed_Reason__c ) ) &amp;&amp; NOT(ISPICKVAL( StageName , &apos;Closed Lost&apos;)) &amp;&amp; (ISCHANGED(L_PR_Closed_Reason__c) || ISNEW())&amp;&amp; RecordType.Name = &apos;PRM Opportunity&apos;</errorConditionFormula>
    <errorDisplayField>L_PR_Closed_Reason__c</errorDisplayField>
    <errorMessage>Closed Reason should only be filled when Status is selected as Closed Lost</errorMessage>
</ValidationRule>