force-app/main/default/objects/Opportunity/validationRules/Closed_reason_mandatory_when_Opportunity.validationRule-meta.xml
<ValidationRule>
    <fullName>Closed_reason_mandatory_when_Opportunity</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL(StageName, &apos;Closed Lost&apos;) &amp;&amp; ISBLANK( L_PR_Closed_Reason__c) &amp;&amp; (ISCHANGED(StageName) || ISNEW()) &amp;&amp;  RecordType.Name = &apos;PRM Opportunity&apos;</errorConditionFormula>
    <errorDisplayField>L_PR_Closed_Reason__c</errorDisplayField>
    <errorMessage>Please fill Closed Reason while setting the Opportunity status as Closed Lost.</errorMessage>
</ValidationRule>