force-app/main/default/objects/Opportunity/validationRules/Opp_StartDate_less_than_closedate.validationRule-meta.xml
<ValidationRule>
    <fullName>Opp_StartDate_less_than_closedate</fullName>
    <active>true</active>
    <errorConditionFormula>L_PR_StartDate__c &gt; CloseDate</errorConditionFormula>
    <errorDisplayField>L_PR_StartDate__c</errorDisplayField>
    <errorMessage>Opportunity Start date should not be greater than Opportunity Close Date</errorMessage>
</ValidationRule>